--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <a class="blog-header-logo text-dark" href="/">Django Blog</a>
           </div>
           <div class="col-4">
-            <form action="{% url 'search' %}" method="get">
+            <form action="{% url 'search' %}" method="GET">
               <div class="input-group">
                   <input class="form-control" type="text" name="keyword" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
                   <button type="submit" class="btn btn-warning" id="button-search" type="button">Go!</button>
@@ -29,7 +29,7 @@
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             <a class="btn btn-sm btn-warning" href="#">Login</a> &nbsp;
-            <a class="btn btn-sm btn-outline-secondary" href="#">Sign Up</a>
+            <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Sign Up</a>
           </div>
         </div>
       </header>
