--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,14 @@
             </form>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-sm btn-warning" href="#">Login</a> &nbsp;
+            {% if user.is_authenticated %}
+              <span>Welcome, {{ user.username }}!</span>
+              &emsp;
+              <span><a href="{% url 'logout' %}">Logout</a></span>
+            {% else %}
+            <a class="btn btn-sm btn-warning" href="{% url 'login'%}">Login</a> &nbsp;
             <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Sign Up</a>
+            {% endif %}
           </div>
         </div>
       </header>
