--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
             {% if user.is_authenticated %}
-              <span>Welcome, {{ user.username }}!</span>
+              <span><a href="{% url 'dashboard' %}">Dashboard</a></span>
               &emsp;
               <span><a href="{% url 'logout' %}">Logout</a></span>
             {% else %}
